# speechtotext

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_app.py
