[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kerobot"]

[tool.poetry.dependencies]
python = "^3.6"
PyAudio = "^0.2.11"
pylint = "^2.6.0"
google-cloud-speech = "^2.0.1"
six = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
